objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Fees payment process</fullName>
        <description>Process of paying fees</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Due to be refunded</fullName>
        </values>
        <values>
            <fullName>Online application%2C card payment due</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
        <values>
            <fullName>Returned by bank</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Participant Application</fullName>
        <description>Process of applying to be on The Challenge</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 - Received application</fullName>
        </values>
        <values>
            <fullName>2 - Received payment details</fullName>
        </values>
        <values>
            <fullName>3a - Checked consent and location%2C</fullName>
        </values>
        <values>
            <fullName>3b - Checked Year and others persuaded</fullName>
        </values>
        <values>
            <fullName>4 - No obvious medical%2Fissues</fullName>
        </values>
        <values>
            <fullName>5 - Passed Champion Teacher test</fullName>
        </values>
        <values>
            <fullName>6 - Selected</fullName>
        </values>
        <values>
            <fullName>A - Getting more information</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>X - Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADHD__c</fullName>
        <label>ADHD?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepted__c</fullName>
        <inlineHelpText>Date accepted onto wave</inlineHelpText>
        <label>OK to accept</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allergy_to_foods__c</fullName>
        <label>Allergy to foods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_banked__c</fullName>
        <inlineHelpText>Amount banked/taken</inlineHelpText>
        <label>Amount banked</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_due_Worldpay_online_card_payment__c</fullName>
        <label>IGNORE Amount due Worldpay (online)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_received__c</fullName>
        <label>Amount received</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_be_paid__c</fullName>
        <description>Amount to be deducted from card</description>
        <label>Amount to be paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>£25 deposit - returned when programme completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_anti_social_reckless_behaviour__c</fullName>
        <label>Any anti-social,reckless behaviour</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_exposure_to_infectious_diseases__c</fullName>
        <description>Is the young person suffering from, or are they a carrier of any infectious diseases or have they travelled from an area where they have been exposed?</description>
        <label>Any exposure to infectious diseases?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_other_diagnosed_condition_or_issue__c</fullName>
        <description>Any other diagnosed condition or is there any thing else you wish us to know about?</description>
        <label>Any other diagnosed condition or issue?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <displayFormat>A{0000}</displayFormat>
        <inlineHelpText>Auto-generating ID number for each applicant</inlineHelpText>
        <label>AppID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appeals</label>
        <referenceTo>Appeals__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Appeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Date_of_Birth__c</fullName>
        <description>Date of Birth of Applicant</description>
        <label>Applicant Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <label>Applicant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_address_line_2__c</fullName>
        <label>Applicant address line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_address_line_3__c</fullName>
        <label>Applicant address line 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_city__c</fullName>
        <label>Applicant city</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_home_telephone__c</fullName>
        <inlineHelpText>Applicant&apos;s home telephone number</inlineHelpText>
        <label>Applicant home telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_mobile__c</fullName>
        <inlineHelpText>Applicant mobile phone number</inlineHelpText>
        <label>Applicant mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant_postal_address__c</fullName>
        <label>Applicant postal address 1st line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_surname__c</fullName>
        <description>Surname of the applicant</description>
        <label>Applicant surname</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <inlineHelpText>Method of application</inlineHelpText>
        <label>Application method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aspergers_Syndrome__c</fullName>
        <label>Aspergers Syndrome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <label>Assigned Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associate_mentor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if the YP wants to be an Associate Mentor</inlineHelpText>
        <label>Associate mentor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_mentor_notes__c</fullName>
        <label>Associate mentor notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Associate_mentor_reference_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if a reference has been received</inlineHelpText>
        <label>Associate mentor reference received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asthma_bronchitis_tuberculosis_or_othe__c</fullName>
        <label>Asthma or lung condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Address that card to be used is registered to</description>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bladder_urinary_problems__c</fullName>
        <label>Bladder / urinary problems?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blood_disorder__c</fullName>
        <label>Blood disorder?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_the_young_person_swim_50_metres__c</fullName>
        <description>Can the young person swim 50 metres in light clothing?</description>
        <label>Can the young person swim 50 metres?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_authorisation_code__c</fullName>
        <description>Authorisation code for the card payment</description>
        <inlineHelpText>Authorisation code for the card payment</inlineHelpText>
        <label>Card authorisation code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_authorisation_date_and_time__c</fullName>
        <description>DateTime when card payment was authorised by the card processor</description>
        <inlineHelpText>DateTime when card payment was authorised by RBS Worldpay or Paypal</inlineHelpText>
        <label>Card authorisation date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Card_merchant_reference__c</fullName>
        <description>Merchant reference id for the card payment</description>
        <inlineHelpText>Merchant reference id for the card payment</inlineHelpText>
        <label>Card merchant reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_number__c</fullName>
        <description>Number on credit and debit card</description>
        <label>Card number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_payer_s_email__c</fullName>
        <description>Email address supplied by card payer</description>
        <inlineHelpText>Email address supplied by card payer</inlineHelpText>
        <label>Card payer&apos;s email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Card_type__c</fullName>
        <description>Type of debit or credit card</description>
        <inlineHelpText>Type of debit or credit card</inlineHelpText>
        <label>Card type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_name__c</fullName>
        <description>Name of cardholder on credit or debit card</description>
        <label>Cardholder name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_or_card_name__c</fullName>
        <description>Name on cheque or card</description>
        <inlineHelpText>Name on cheque or card</inlineHelpText>
        <label>Cheque or card name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_came_to_PG_eve__c</fullName>
        <label>Child came to PG eve</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Date__c</fullName>
        <inlineHelpText>Date of consent</inlineHelpText>
        <label>Consent Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_name__c</fullName>
        <description>Name given to show consent</description>
        <label>Consent name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if data entry has been double-checked</inlineHelpText>
        <label>Data checked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_consent_being_given__c</fullName>
        <description>Date of consent being given</description>
        <label>Date of consent being given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_withdrawal_notification__c</fullName>
        <formula>Account.Main_Contact__r.Date_of_YPPG_withdrawal_notification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of withdrawal notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_refund_request_passed_to_ST_or_SN__c</fullName>
        <inlineHelpText>Date either Sally (cheques and bank transfers) or Sandra (Paypal) emailed with refund request</inlineHelpText>
        <label>Date refund request passed to ST or SN</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_letter_sent__c</fullName>
        <inlineHelpText>Date the applicant was advised that they have not been accepted</inlineHelpText>
        <label>Declined correspondence sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_reason__c</fullName>
        <label>Declined reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behaviour</fullName>
                </value>
                <value>
                    <fullName>Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Describe_ADHD__c</fullName>
        <label>Describe ADHD</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Aspergers_Syndrome__c</fullName>
        <label>Describe Aspergers Syndrome</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Blood_Disorder_issues__c</fullName>
        <label>Describe Blood Disorder issues</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Hyperactivity__c</fullName>
        <label>Describe Hyperactivity</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_allergy_to_foods__c</fullName>
        <label>Describe allergy to foods</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_other_issues__c</fullName>
        <description>Describe any other diagnosed conditions or is there any thing else you wish us to know about?</description>
        <label>Describe any other issues?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_asthma_or_lung_condition__c</fullName>
        <label>Describe asthma or lung condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_behaviour_issues__c</fullName>
        <description>Describe anti-social, reckless or impulsive behaviour?</description>
        <label>Describe behaviour issues?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_bladder_urinary_problems__c</fullName>
        <label>Describe bladder / urinary problems?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_broken_bones_muscle_ligament__c</fullName>
        <inlineHelpText>Describe history of broken bones, muscle tears or tendon / ligament damage</inlineHelpText>
        <label>Describe broken bones, muscle, ligament</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_details_of_being_in_care__c</fullName>
        <description>Describe situation of child being in care</description>
        <label>Describe details of being in care</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_diabetes__c</fullName>
        <label>Describe diabetes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_dietary_requirements__c</fullName>
        <description>Describe any special dietary requirements [e.g. vegetarian, vegan or halal]?</description>
        <label>Describe dietary requirements?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_difficulty_adhering_to_rules__c</fullName>
        <description>Describe difficulty adhering to clear rules and boundaries?</description>
        <label>Describe difficulty adhering to rules</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_emotional_behaviour_psych_issue__c</fullName>
        <description>Describe emotional, behavioural or psychological difficulties</description>
        <label>Describe emotional,behaviour,psych issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_epilepsy_fainting_migraines__c</fullName>
        <inlineHelpText>Describe epilepsy, fainting attacks, migraines or severe head injury?</inlineHelpText>
        <label>Describe epilepsy, fainting, migraines</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_exposure_to_infectious_diseases__c</fullName>
        <description>Describe how the young person suffering from, or is a carrier of any infectious diseases or how  they travelled from an area where they have been exposed.</description>
        <label>Describe exposure to infectious diseases</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_heart_trouble_etc__c</fullName>
        <label>Describe heart trouble etc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_history_risk_of_violence__c</fullName>
        <inlineHelpText>Describe history/risk of violent behaviour?</inlineHelpText>
        <label>Describe history/risk of violence</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_history_substance_alcohol_abuse__c</fullName>
        <description>Describe history of substance and/or alcohol abuse?</description>
        <label>Describe history substance/alcohol abuse</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_lack_of_tetanus_injection__c</fullName>
        <label>Describe lack of tetanus injections</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_learning_difficulties__c</fullName>
        <label>Describe learning difficulties?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_medical_treatment_in_last_2_yrs__c</fullName>
        <description>Describe if they been treated by a doctor or in hospital within the last 2 years for anything other than a trivial complaint?</description>
        <label>Describe medical treatment in last 2 yrs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_other_allergic_reactions__c</fullName>
        <label>Describe other allergic reactions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_physical_disability__c</fullName>
        <inlineHelpText>Describe physical disability, restricted mobility or use a wheelchair?</inlineHelpText>
        <label>Describe physical disability?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_severe_hearing_visual_issues__c</fullName>
        <inlineHelpText>Describe severe hearing / visual impairments?</inlineHelpText>
        <label>Describe severe hearing/ visual issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_stomach_digestive_abdominal__c</fullName>
        <inlineHelpText>Describe Stomach / digestive / abdominal problems</inlineHelpText>
        <label>Describe stomach, digestive, abdominal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_taking_any_medication__c</fullName>
        <description>State the condition being treated, name the medication, state the dosage.</description>
        <label>Description of medication?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diabetes__c</fullName>
        <label>Diabetes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_not_finish__c</fullName>
        <description>Reason participant did not finish programme.</description>
        <inlineHelpText>Reason participant did not finish programme.</inlineHelpText>
        <label>Did not finish</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Did_not_graduate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did not graduate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Difficulty_adhering_to_clear_rules_and_b__c</fullName>
        <description>Difficulty adhering to clear rules and boundaries?</description>
        <label>Difficulty adhering to clear rules?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Donation_amount__c</fullName>
        <description>Amount of the payment that is a donation</description>
        <inlineHelpText>Amount of the payment that is a donation</inlineHelpText>
        <label>Donation amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Emotional_behavioural_psychological__c</fullName>
        <description>Any emotional, behavioural or psychological difficulties?</description>
        <label>Emotional, behavioural, psychological?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epilepsy_fainting_attacks_migraines__c</fullName>
        <description>epilepsy, fainting attacks, migraines or have you ever suffered a severe head injury?</description>
        <label>Epilepsy, fainting attacks, migraines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnic_group_observed__c</fullName>
        <label>Ethnic group observed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eve_invite_to_NON_consented_parents__c</fullName>
        <label>Eve invite to NON consented parents</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventsEvents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Events</label>
        <referenceTo>Events__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <description>MM/YYYY (i.e., 06/1980 for June 1980)</description>
        <label>Expiry date</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_friend__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if a Facebook friend of the Alumni Coordinator</inlineHelpText>
        <label>Facebook friend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_group__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if they are a member of the Grads facebook group</inlineHelpText>
        <label>Facebook group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_name__c</fullName>
        <inlineHelpText>Grad&apos;s name on Facebook</inlineHelpText>
        <label>Facebook name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_choice_area_of_interest__c</fullName>
        <label>First choice area of interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <description>School of applicant</description>
        <label>School</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_they_been_treated_by_a_doctor_or_in__c</fullName>
        <description>Have they been treated by a doctor or in hospital within the last 2 years for anything other than a trivial complaint?</description>
        <label>Medically treated in last two years?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heart_trouble_angina_raised_blood_pres__c</fullName>
        <label>Heart trouble, angina, raised blood pres</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highlight_of_AM_experience__c</fullName>
        <label>Highlight of AM experience?</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
</CustomObject>